# rust-taskflow-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust-ci.yml
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
src/: app.rs  auth.rs  lib.rs  main.rs  state.rs
src/database/: sqlite.rs
src/errors/: mod.rs
src/models/: task.rs
src/routes/: tasks.rs
tests/: api_tests.rs
