[package]
name = "rust-taskflow-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
dotenvy = "0.15"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
